--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,8 @@
-[package]
-name = "multiplayer_fps"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver="2"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-piston = "0.55.0"
-piston2d-graphics = "0.44.0"
-piston_window = "0.131.0"
-piston2d-opengl_graphics = "0.84.0"
+members = [
+  "client",
+  "server",
+  "store"
+]
