--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+store = { path = "../store" }
+anyhow = "1.0"
+bevy = { version = "0.8", features = ["dynamic"] }
+renet = "0.0.9"
+bevy_renet = "0.0.5"
+bincode="1.3.1"
+dotenv = "0.15.0"
