--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "rust-analyzer.linkedProjects": ["./store/Cargo.toml"]
+  "rust-analyzer.linkedProjects": ["./store/Cargo.toml", "./client/Cargo.toml"]
 }
